Small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello coursera! its a greatsafdkjhc</h1>
+<h1>Hello coursera! its a greatsafdkjhcsss</h1>
 </body>
 </html>
